--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.bedtwL</groupId>
-    <artifactId>PureFFA-BloodEffectAddon</artifactId>
+    <artifactId>PureFFA-RickrollKill</artifactId>
     <version>1.1</version>
     <packaging>jar</packaging>
 
@@ -51,6 +51,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -65,6 +69,12 @@
             <version>1.0-Beta</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/PureAPI-1.0-Beta.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.github.koca2000</groupId>
+            <artifactId>NoteBlockAPI</artifactId>
+            <version>1.6.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
