--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - master
-    tags:
-      - 'v*'
+
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,16 +17,17 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17' # Change this to match your project's Java version
+          java-version: '17' # Change as needed
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Upload JAR to Release
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Create or Update Release
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            target/*.jar  # Adjust if your JAR filename is different
+          tag_name: latest
+          name: Latest Build
+          files: target/*.jar
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
