--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.bedtwL</groupId>
+    <groupId>me.itsglobally</groupId>
     <artifactId>PureFFA-RickrollKill</artifactId>
     <version>1.1</version>
     <packaging>jar</packaging>
