--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,13 +34,17 @@ jobs:
             count=1
           fi
           echo "release_count=$count" >> $GITHUB_OUTPUT
+          echo "tag_name=build-${count}" >> $GITHUB_OUTPUT
 
-      - name: Create or Update Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: latest
-          name: Build ${{ steps.get_release.outputs.release_count }}
-          files: target/*.jar
-          prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: comnoco/create-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_release.outputs.tag_name }}
+          release_name: Build ${{ steps.get_release.outputs.release_count }}
+          body: |
+            Automatic Build
+          draft: false
+          prerelease: false
