--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,13 +34,13 @@ jobs:
             count=1
           fi
           echo "release_count=$count" >> $GITHUB_OUTPUT
-
-      - name: Create or Update Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: latest
-          name: Build ${{ steps.get_release.outputs.release_count }}
-          files: target/*.jar
-          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./PureFFA-RickrollKIll-1.1.jar
+          asset_name: PureFFA-RickrollKIll-1.1.jar
+          asset_content_type: application/jar
