--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.jar.outputs.jar_path }}
-          asset_name: build-${{ steps.get_release.outputs.release_count }}.jar
+          asset_name: PureFFA-Rickrollkill.jar
           asset_content_type: application/java-archive
